--- a/deeplink_demo/android/app/src/main/AndroidManifest.xml
+++ b/deeplink_demo/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,12 @@
                 <data android:scheme="http" android:host="hostingdemo-c9502.web.app" />
                 <data android:scheme="https" />
             </intent-filter>
-
+            <intent-filter>
+                <data android:scheme="myapp" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
