--- a/deeplink_demo/ios/Runner/Info.plist
+++ b/deeplink_demo/ios/Runner/Info.plist
@@ -47,5 +47,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleURLName</key>
+		<string>MyApp</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+		<string>myapp</string>
+		</array>
+	</dict>
+	</array>	
 </dict>
 </plist>
